  imagedrawer. (LP #779870)

- Unified the search types seen on the search results page with the search
  categories used in live search.  Added a 'Reference Manuals' search.  Merged
  from branches/rossi_search_unification.
  (LP # 784222)

- Changed the workflow for intranet content so that content is owned by the
  organization rather than by individual authors.  (LP #798850)

3.66.1 (2011-06-24)
-------------------

- Fixed mailin bug where bounced and quarantined messages generated an
  exception trying to email the authors.  (LP #801539)

3.66 (2011-06-23)
-----------------

- Fixed error in displaying forum topics with comments. (LP #798125)

- Improved text from html extraction used for extracting descriptions from
  document text.  Weird Microsoft html is now removed.  (LP #794103)

- Fixed error in search results page when search term is blank.  (LP #798727)

- Made the html to text converter more tolerant of malformed html.

- Refactored outgoing email to use Karl configuration for the envelope from
  address. (LP #785267)

- The custom weights (1, 1/32, 1/32**2, and 1/32**3) were not being applied
  to text queries. Fixed.

- Added the 'Precedence: bulk' header to content alert emails. (LP #785272)

- Added 'clear log' link to error monitor view. (LP #795669)

3.65 (2011-06-15)
-----------------

- Improved ranking of search results.  Merged from branches/rossi_docrank.

- Pulled 'custom.css' out of the resources that are juiced. It is included
  in each page separately so that customization packages can override.

3.64 (2011-06-09)
-----------------

- The edit blog entry form is now only associated with the IBlogEntry content
  type. (LP #715897)

- Removed nonsensical 'Edit' button from the root people directory admin view.
  (LP #715897)

- In the advanced and live searches, set the unicode_errors policy to 'ignore'
  in order to work around broken web browsers that send request strings in
  character encodings other than UTF-8. (LP #788234)
