@@ -11,6 +11,7 @@ EDIT = 'edit'
 CREATE = 'create'
 DELETE = 'delete'
 DELETE_COMMUNITY = 'delete community'
+EMAIL = 'email'
 MODERATE = 'moderate'
 ADMINISTER = 'administer'
 COMMENT = 'comment'
@@ -18,7 +19,7 @@ COMMENT = 'comment'
 GUEST_PERMS = (VIEW, COMMENT)
 MEMBER_PERMS = GUEST_PERMS + (EDIT, CREATE, DELETE)
 MODERATOR_PERMS = MEMBER_PERMS + (MODERATE,)
-ADMINISTRATOR_PERMS = MODERATOR_PERMS + (ADMINISTER, DELETE_COMMUNITY)
+ADMINISTRATOR_PERMS = MODERATOR_PERMS + (ADMINISTER, DELETE_COMMUNITY, EMAIL)
 
 ALL = AllPermissionsList()
 NO_INHERIT = (Deny, Everyone, ALL)
