@@ -44,15 +44,14 @@
               </a>
           </div>
         </div>
-        <div class="generic-portlet"
-             tal:condition="api.can_email">
+        <div class="generic-portlet">
           <h3>Email</h3>
-          <div class="portlet-item">
+          <div class="portlet-item" tal:condition="api.can_email">
               <a href="${api.app_url}/email_users.html">
                 Email Users
               </a>
           </div>
-          <div class="portlet-item">
+          <div class="portlet-item" tal:condition="api.can_administer">
               <a href="${api.quarantine_url}">
                 View mailin quarantine
               </a>
